Added short implementation